fix: show button on mobile, hide on desktop

--- a/styles/header.scss
+++ b/styles/header.scss
@@ -5,18 +5,26 @@ header {
   top: 0;
   backdrop-filter: blur(10px);
   z-index: 999;
+
   .container {
     @include flex(center, space-between, none);
+
     nav {
       a {
         margin: 0 $xl-2;
       }
     }
   }
+
+  .menucontrol {
+    display: none;
+  }
 }
+
 .activeLink {
   position: relative;
   color: $green;
+
   &::after {
     content: "";
     position: absolute;
@@ -33,6 +41,10 @@ header {
     nav {
       display: none;
     }
+    .menucontrol {
+      display: block;
+    }
+
     .openMenu {
       position: absolute;
       top: 75px;
@@ -44,6 +56,7 @@ header {
       display: flex;
       flex-direction: column;
       z-index: 999;
+
       a {
         width: 100%;
         display: block;
@@ -51,6 +64,7 @@ header {
         margin-bottom: 30px !important;
       }
     }
+
     .button-primary {
       display: none;
     }
